tests/negative/gold/indent7_test.gold
tests/negative/indent7_test.toit:7:7: error: Empty blocks are not allowed
  func:
      ^
tests/negative/indent7_test.toit:8:12: error: Unresolved identifier: 'unresolved'
  local := unresolved
           ^~~~~~~~~~
Compilation failed.
